dark-mode and about me finished

--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Claucegoma portfolio</title>
   </head>
+  <header> 
+    <img  src ="assets/gato-removebg-preview.png" alt="">
+   <i><h2>Front-End developer</h2></i>
+   <dark-mode-button></dark-mode-button>
+  </header>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <about-me></about-me>
+    
+    <script type="module" src="./components/about-me.js"></script>
+    <script type="module" src="components/dark-mode-button.js"></script>
+
   </body>
 </html>
