working on the skills cards

--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
   <body>
     <div id="app"></div>
     <about-me></about-me>
-    
+    <rotating-cards-section></rotating-cards-section>
+
+
     <script type="module" src="./components/about-me.js"></script>
     <script type="module" src="components/dark-mode-button.js"></script>
-
+    <script type="module" src="components/rotating-cards.js"></script>
   </body>
+  <hr />
+  <footer>
+    <div align="center">
+      🐈‍⬛ &copy;Copyright Cecilia González Mariblanca 2023  🐈
+    </div>
+  </footer>
+
 </html>
