working at the sections

--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <div id="app"></div>
     <about-me></about-me>
     <rotating-cards-section></rotating-cards-section>
-
+    <my-projects></my-projects>
+    <social-media></social-media>
+    <my-curiosities></my-curiosities>
 
     <script type="module" src="./components/about-me.js"></script>
     <script type="module" src="components/dark-mode-button.js"></script>
     <script type="module" src="components/rotating-cards.js"></script>
+    <script type="module" src="./components/my-projects.js"></script>
+    <script type="module" src="./components/social-media.js"></script>
+    <script type="module" src="./components/my-curiosities.js"></script>
   </body>
   <hr />
   <footer>
