--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
     <social-media></social-media>
     <my-curiosities></my-curiosities>
 
-    <script type="module" src="./components/about-me.js"></script>
-    <script type="module" src="components/dark-mode-button.js"></script>
-    <script type="module" src="components/rotating-cards.js"></script>
-    <script type="module" src="./components/my-projects.js"></script>
-    <script type="module" src="./components/social-media.js"></script>
-    <script type="module" src="./components/my-curiosities.js"></script>
+    <script type="module" src="./components/index.js"></script>
   </body>
   <hr />
   <footer>
